--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,7 @@ li {
 }
 
 html {
-    font-family: 'Urbanist', sans-serif;
-    background-image: linear-gradient( 109.6deg,  rgba(255,179,189,1) 1.8%, rgba(254,248,154,1) 50.6%, rgba(161,224,186,1) 100.3% );
+    font-family: 'Roboto', sans-serif;
 }
 
 ul {
